Fixes overlapping elements on desktop
[OC-376]

--- a/src/styles/components/detailPreview.scss
+++ b/src/styles/components/detailPreview.scss
@@ -94,6 +94,7 @@
       @media screen and (min-width: 768px) {
         top: 20px;
         right: 20px;
+        left: auto;
       }
     }
 
